--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div id="floatingHeartsContainer"></div>
     
     <div id="mainContent">
-        <h2>Welcome to a Little Challenge!</h2>
+        <h2>Mere dil ka raste mea enter karne ke liye</h2>
         <p>Guess the secret phrase to unlock a surprise 🎁</p>
         <input type="text" id="password" placeholder="Enter the secret phrase">
         <button onclick="checkPassword()">Submit</button>
